fixed some css layout bugs

--- a/web/static/css/radio.css
+++ b/web/static/css/radio.css
@@ -17,34 +17,43 @@ body {
 }
 
 #toolbar {
-    width:              200px;
+    width:              100%;
     text-align:         center;
     margin:             0;
 }
 
 #album-art {
-    height:             200px;
-    width:              200px;
+    width:             100%;
     margin:             0;
     padding:            0;
 }
 
-#main {
+#main, #searchbox {
     width:              80%; 
     margin:             0px 10%; 
-    padding:            8px; 
+}
+
+#main {
     height:             100%; 
-    background-color:   white; 
+    background-color:   white;
+}
+
+#searchbox {
+    background-color:   #888888;
+    color:              white;
+    text-align:         right;
+    border-bottom:      solid 1px black;
+    font-weight:        bold;
 }
 
 #metadata {
-    width: 200px;
+    width: 100%;
     margin: 0px;
     padding: 4px;
 }
 
 #playlistWidget {
-    width:              320px;
+    width:              100%;
     height:             75%;
     overflow-x:         hidden;
     overflow-y:         auto;
@@ -81,7 +90,6 @@ li.played {
 }
 
 li.playing {
-/*     background-color:   #cc0000; */
     background-color:   #4488cc;
     color:              white;
 }
@@ -101,7 +109,6 @@ li.playing {
 }
 
 #tags {
-/*     width:      200px; */
     text-align: justify;
     font-weight: bold;
     color:      #4488cc;
@@ -112,5 +119,9 @@ li.playing {
     max-width: 200px;
     max-height: 400px;
     float: left;
-    margin: 4px;
+    margin: 0px 4px;
+}
+
+#artist-info {
+    padding: 8pt;
 }
